tests/fail/fark-yanlis-hal.kip
(bu tam-sayının) bir-eksiği,
  bunun 1'in farkıdır.
